@@ -1,3 +1,8 @@
+2003-05-30  Mark Kettenis  <kettenis@gnu.org>
+
+	* gdb.asm/asm-source.exp: Make sure the final link succeeds on
+	FreeBSD.
+
 2003-05-29  Richard Henderson  <rth@redhat.com>
 
 	* gdb.asm/alpha.inc: New file.
